--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.17.0",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
