--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@tanstack/react-query-devtools": "^5.20.2",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.0",
+    "child_process": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.290.0",
     "next": "14.0.0",
     "react": "^18",
