mongodb-custom-object-direct-connection

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://admin:dr48aIZk4FLzzx1dg@cluster0.zacaklp.mongodb.net/rims-platform?retryWrites=true&w=majority"
-DATABASE_URL=mongodb+srv://admin:<password>@cluster0.zacaklp.mongodb.net/?retryWrites=true&w=majority
+#DATABASE_URL=mongodb+srv://admin:<password>@cluster0.zacaklp.mongodb.net/?retryWrites=true&w=majority
+DATABASE_URI="mongodb+srv://admin:dr48aIZk4FLzzx1dg@cluster0.zacaklp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0";"
 # USERNAME=admin
 # PASSWORD=dr48aIZk4FLzzx1d
