--- a/.env
+++ b/.env
@@ -4,8 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://admin:dr48aIZk4FLzzx1dg@cluster0.zacaklp.mongodb.net/rims-platform?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://admin:FEXU0X7MYJihv3Bt@cluster0.zacaklp.mongodb.net/rims-platform?retryWrites=true&w=majority"
 #DATABASE_URL=mongodb+srv://admin:<password>@cluster0.zacaklp.mongodb.net/?retryWrites=true&w=majority
-DATABASE_URI="mongodb+srv://admin:dr48aIZk4FLzzx1dg@cluster0.zacaklp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0";"
+#MONGODB_URI="mongodb+srv://admin:dr48aIZk4FLzzx1dg@cluster0.zacaklp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0";"
+MONGODB_URI="mongodb+srv://admin:FEXU0X7MYJihv3Bt@cluster0.zacaklp.mongodb.net/rims-platform?retryWrites=true&w=majority"
 # USERNAME=admin
 # PASSWORD=dr48aIZk4FLzzx1d
